# displaycal-py3

./: .coveragerc  .flake8  .gitignore  CHANGES.html  DisplayCAL-eeColor-to-madVR-converter.py  Makefile  README-fr.html  README.html  README.md  history.html  packages.list  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  upload_to_pypi  upload_to_pypi.cmd
DisplayCAL/: CGATS.py  DisplayCAL.py  ICCProfile.py  RealDisplaySizeMM.c  RealDisplaySizeMM.py  __init__.py  argyll_RGB2XYZ.py  argyll_cgats.py  argyll_instruments.py  argyll_names.py  audio.py  ccmx.py  chromecast_patterngenerator.py  colord.py  colormath.py  config.py  cubeiterator.py  debughelpers.py  defaultpaths.py  demjson_compat.py  display_cal.py  edid.py  embeddedimage.py  encodedstdio.py  encoding.py  floatspin.py  gtypes.py  imfile.py  jsondict.py  jspacker.py  lazydict.py  localization.py  log.py  madvr.py  main.py  meta.py  multiprocess.py  network.py  options.py  ordereddict.py  (+56 more)
misc/: 45-Argyll.rules  CHANGES.template.html  DisplayCAL.pkgproj  DisplayCAL.pyi.spec  Info.plist  README-fr.template.html  README.template.html  alien.rules  debian.postinst  debian.postrm  debian.rules  displaycal-vrml-to-x3d-converter.desktop  displaycal.install  history.template.html  net.displaycal.DisplayCAL.appdata.xml
scripts/: displaycal  displaycal-3dlut-maker  displaycal-apply-profiles  displaycal-apply-profiles-launcher  displaycal-curve-viewer  displaycal-eecolor-to-madvr-converter  displaycal-profile-info  displaycal-scripting-client  displaycal-synthprofile  displaycal-testchart-editor  (+2 more)
(+147 files in other folders)
