[metadata]
name=DisplayCAL
version=3.9.0
license_file = LICENSE.txt

[options]
packages = find:

[bdist_wheel]
universal=1

[bdist_rpm]
release = 1
packager = Florian Höch <florian_at_displaycal.net>
fix_python = 1
post_install = util/rpm_postinstall.sh
post_uninstall = util/rpm_postuninstall.sh
doc_files = LICENSE.txt README.html screenshots/ theme/
# keep_temp = 1

[bdist_wininst]
bitmap = misc/media/install-py.bmp
install_script = util/DisplayCAL_postinstall.py

[install]
record = INSTALLED_FILES
