[metadata]
name=DisplayCAL
version=attr: DisplayCAL.VERSION
license_file = LICENSE.txt

[options]
packages = find:
install_requires =
    build
    certifi
    dbus-python;sys_platform == 'linux'
    distro
    numpy
    Pillow
    PyChromecast
    Send2Trash
    wxPython
    zeroconf

[bdist_wheel]
universal=1

[bdist_rpm]
release = 1
packager = Erkan Ozgur Yilmaz <eoyilmaz@gmail.com>
fix_python = 1
post_install = util/rpm_postinstall.sh
post_uninstall = util/rpm_postuninstall.sh
doc_files = LICENSE.txt README.html screenshots/ theme/
# keep_temp = 1

[bdist_wininst]
bitmap = misc/media/install-py.bmp
install_script = util/DisplayCAL_postinstall.py

[install]
record = INSTALLED_FILES
